# securekit

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  securekit-cli-aad-hex.skf  securekit-cli-aad-text.skf  securekit-cli-generated-key.hex  securekit-cli-invalid-key.hex  securekit-cli-key-file.skf  securekit-cli-packet-opened.txt  securekit-cli-packet-reordered.skt  securekit-cli-packet.skt  securekit-cli-password-aad-hex.skp  securekit-cli-password-aad.skp  securekit-cli-password-pipe.skp  securekit-cli-password-reordered.skp  securekit-cli-password-temp-collision.skp  securekit-cli-password.skp  securekit-cli-pipe.skf  securekit-cli-plain.skf  securekit-cli-plain.txt  securekit-cli-reordered-key-file.skf  securekit-cli-reordered-key-hex.skf  securekit-cli-stdin-file.skf  securekit-cli-temp-collision.skf  securekit-cli-unwrapped-key-sealed.skf  securekit-cli-wrapped-key-reordered.skt  securekit-cli-wrapped-key.skt  securekit-cli-wrapping-key.hex
.github/workflows/: Awesome-mix-vol.1-ci.yml  codeql.yml  fuzz.yml  securekit-ci.yml
benchmarks/: crypto_file_bench.cpp
cmake/: amvConfig.cmake.in  securekitConfig.cmake.in
docs/: BENCHMARKS.md  CLI.md  COVERAGE.md  DEPENDENCY_POLICY.md  DOGFOODING.md  EXTERNAL_SECURITY_REVIEW.md  FORMAT.md  FUZZING.md  INTERNALS.md  KDF_AGILITY.md  OPENSSL_POLICY.md  PUBLIC_API_POLICY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY_MODEL.md  VERIFY_RELEASE.md
examples/basic/: CMakeLists.txt  main.cpp
include/amv/: aead.hpp  amv.hpp  base64.hpp  error.hpp  export.hpp  hash.hpp  hex.hpp  random.hpp  types.hpp
include/securekit/: aead.hpp  base64.hpp  compare.hpp  error.hpp  export.hpp  file.hpp  hash.hpp  hex.hpp  key_wrap.hpp  packet_stream.hpp  random.hpp  securekit.hpp  types.hpp  version.hpp
src/: aead.cpp  aead_internal.hpp  base64.cpp  compare.cpp  error.cpp  file.cpp  file_crypto.cpp  file_detail.hpp  file_io.cpp  hash.cpp  hex.cpp  key_wrap.cpp  packet_stream.cpp  random.cpp  version.cpp  wipe.hpp
src/cli/: commands.cpp  commands.hpp  main.cpp
tests/: aead_test.cpp  base64_test.cpp  compare_test.cpp  file_test.cpp  fixture_inventory_test.cpp  fixture_utils.hpp  hash_test.cpp  hex_test.cpp  internal_wipe_test.cpp  key_wrap_test.cpp  packet_stream_test.cpp  public_headers_test.cpp  random_test.cpp
tests/cli/: check_cli.cmake
tests/consumer/: CMakeLists.txt  main.cpp
tests/fixtures/: README.md  skf1-binary-aad.hex  skf1-empty-aad.hex  skf1-known-file.hex  skp1-binary-aad.hex  skp1-empty-aad.hex  skp1-known-password-file.hex  skt1-aes256-gcm-aad.hex  skt1-aes256-gcm-binary-aad.hex  skt1-aes256-gcm-empty.hex  skt1-key-wrap-zero.hex  skt1-key-wrap.hex
tests/fixtures/negative/: README.md  skf1-bad-magic.hex  skf1-chunk-after-final.hex  skf1-missing-final-chunk.hex  skf1-non-final-short-chunk.hex  skf1-non-monotonic-index.hex  skf1-record-oversized-plaintext.hex  skf1-record-unsupported-final-flag.hex  skf1-truncated-record.hex  skf1-unsupported-algorithm.hex  skf1-unsupported-chunk-size.hex  skf1-unsupported-version.hex  skp1-bad-magic.hex  skp1-chunk-after-final.hex  skp1-missing-final-chunk.hex  skp1-non-monotonic-index.hex  skp1-record-oversized-plaintext.hex  skp1-record-unsupported-final-flag.hex  skp1-truncated-record.hex  skp1-unsupported-chunk-size.hex  skp1-unsupported-cipher.hex  skp1-unsupported-flags.hex  skp1-unsupported-kdf.hex  skp1-unsupported-scrypt-n.hex  skp1-unsupported-scrypt-p.hex  skp1-unsupported-scrypt-params.hex  skp1-unsupported-scrypt-r.hex  skp1-unsupported-version.hex  skt1-bad-magic.hex  skt1-missing-tag-format-minimum-size.hex  skt1-unsupported-version.hex
tests/fuzz/: base64_fuzz.cpp  base64url_fuzz.cpp  file_fuzz.cpp  fuzz_utils.hpp  hex_fuzz.cpp  skt1_fuzz.cpp
tests/package/: check_dogfood.cmake  check_installed_cli.cmake  check_package.cmake  check_package_recipes.cmake  check_release_assets.cmake  check_release_preflight.cmake  check_release_workflow.cmake
